# widget_rust

./: Cargo.toml  build.rs  config.json  instalador.iss
src/: autostart.rs  events.rs  gui.rs  main.rs  utils.rs
