[package]
name = "countdown_widget"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = "0.4.41"
chrono-tz = "0.10.3"
native-windows-gui = "1.0.13"
winapi = { version = "0.3", features = ["winuser", "dwmapi"] }
winreg = "0.10.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "Aniversario_widget"
path = "src/main.rs"